--- a/ModeloAspNetMvc/Views/Shared/_Menu.cshtml
+++ b/ModeloAspNetMvc/Views/Shared/_Menu.cshtml
@@ -73,17 +73,22 @@
                     </a>
                 </li>
 
-                @*<li><a href="~/Cliente/Relatorio"><span class="lbl">Relatório de Clientes</span></a></li>
-                <li class="divider"></li>
-                <li><a href="~/Produto/Relatorio"><span class="lbl">Relatório de Produtos</span></a></li>*@
+                <li class="purple with-sub">
+                    <a href="~/Cliente/Relatorio">
+                        <span class="lbl">
+                            <i class="font-icon font-icon-chart-3"></i>
+                            <span class="lbl">Relatório de Clientes</span>
+                        </span>
+                    </a>
+                </li>
 
-                @*<li class="purple with-sub">
-            <a href="~/Venda/ResumoDePagamentosECaixa">
-                <span class="lbl">
-                    <i class="font-icon font-icon-editor-table"></i>
-                    <span class="lbl">Resumo de Pagamentos e Caixa</span>
-                </span>
-            </a>
-        </li>*@
+                <li class="purple with-sub">
+                    <a href="~/Produto/Relatorio">
+                        <span class="lbl">
+                            <i class="font-icon font-icon-chart-4"></i>
+                            <span class="lbl">Relatório de Produtos</span>
+                        </span>
+                    </a>
+                </li>            
             </ul>
         </nav>
